--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,5 +1,5 @@
 .about {
-  padding-top: 60px;
+  padding-top: calc(60px + var(--preview-banner-height, 0px));
 }
 
 /* Hero */
