--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .home {
-  padding-top: 60px;
+  padding-top: calc(60px + var(--preview-banner-height, 0px));
 }
 
 /* Hero Section */
