--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,5 +1,5 @@
 .product-detail {
-  padding-top: 60px;
+  padding-top: calc(60px + var(--preview-banner-height, 0px));
   max-width: 1400px;
   margin: 0 auto;
   padding-left: 2rem;
@@ -7,7 +7,7 @@
 }
 
 .product-not-found {
-  padding-top: 60px;
+  padding-top: calc(60px + var(--preview-banner-height, 0px));
   min-height: 60vh;
   display: flex;
   flex-direction: column;
