--- a/src/pages/Shop.css
+++ b/src/pages/Shop.css
@@ -1,5 +1,5 @@
 .shop {
-  padding-top: 60px;
+  padding-top: calc(60px + var(--preview-banner-height, 0px));
   min-height: 100vh;
 }
 
